# squire

./: .env-template  .gitignore  Makefile  README.md  pyproject.toml  request-template  requirements-dev.txt  slash.py  template.yaml
.github/.workflows/: deploy.yml
.github/workflows/: deploy.yml
command/: event.json  handler.py
interaction/: handler.py
lambda/: .env-template  README.md  app.py  build.sh  handler.py  makefile  requirements-dev.txt  requirements.txt  template.yaml
lambda/.chalice/: README.md  config-template.json
lambda/.chalice/deployed/: dev.json
lambda/command/: build.sh  handler.py
lambda/interaction/: build.sh  handler.py
lambda/layers/: build.sh  layers.sh
lambda/layers/numpy/: requirements.txt
lambda/layers/openai/: requirements.txt
lambda/layers/pandas/: requirements.txt
lambda/layers/pynacl/: requirements.txt
lambda/pynacl/: requirements.txt
lambda/tests/: test_app.py
layers/pandas/: requirements.txt
squire/: __main__.py  bot.py  cli.py  discord.py  gpt3.py  main.py  twitter.py
